<resources>
    <string name="app_name">K_table</string>
    <string name="id_hint">请输入教务处账号</string>
    <string name="psw_hint">请输入教务处密码</string>
    <string name="showPsw">显示密码</string>
    <string name="login">登录</string>
    <string name="forgetPsw">忘记密码？</string>
    <string name="signUp">新用户注册</string>
    <string name="serviceClause">服务条款</string>
    <string name="sunday">周日</string>
    <string name="saturday">周六</string>
    <string name="friday">周五</string>
    <string name="thursday">周四</string>
    <string name="wednesday">周三</string>
    <string name="tuesday">周二</string>
    <string name="monday">周一</string>
    <string name="default_date">01-25</string>
    <string name="refresh">刷新</string>
</resources>
