<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.exercise.p.k_table.control.LoginActivity"
    android:background="@color/colorWhiteBG">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo_big" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGreyHint" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:id="@+id/idEdit"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/id_hint"
                    android:textColorHint="@color/colorGreyHint"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/ic_login_id"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGreyHint" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:id="@+id/pswEdit"
                    android:hint="@string/psw_hint"
                    android:textColorHint="@color/colorGreyHint"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorBlack"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/ic_login_psw"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGreyHint" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/showPswCheckBox"
                        android:text="@string/showPsw"
                        android:textColor="@color/colorBlack"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginButton"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/login"
                    android:background="@drawable/shape_login_button"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/forgetPsw"
                        android:gravity="start"
                        android:text="@string/forgetPsw"
                        android:textColor="@color/colorBlue"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/signUp"
                        android:gravity="end"
                        android:text="@string/signUp"
                        android:textColor="@color/colorBlue"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serviceClause"
            android:text="我已阅读并同意"
            android:textColor="@color/colorBlack"
            android:checked="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showClause"
            android:text="@string/serviceClause"
            android:textColor="@color/colorBlue"/>
    </LinearLayout>

</LinearLayout>
